Adjusted homepage hero margins to fix gap at top.

--- a/src/components/HeroGames/HeroGames.scss
+++ b/src/components/HeroGames/HeroGames.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    margin-top: -8rem;
+    margin-top: -9rem;
     z-index: -3;
 
     
